2008-08-25  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackenddav.c (ms_response_to_file_info):
	Same as below but for the webdav's getlastmodified
	response (Closes: #538573)

2008-08-22  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendhttp.c (query_info_ready): Use
	libsoup to parse the "Last-Modified" header, not
	the ISO-8601 parsing functions (Closes: #547133)
	Requires libsoup trunk

2008-08-21  Hans Petter Jansson  <hpj@novell.com>

	* daemon/gvfsbackendgphoto2.c (ensure_ignore_prefix)
	(do_mount)
	(do_enumerate): Improve various user- and translator-
	unfriendly error messages.

2008-08-21  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Late post-release version bump to 0.99.6.

2008-08-21  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendgphoto2.c (do_unmount):
	Handle plural forms correctly. Fixes bug #548841.

=== gvfs 0.99.5 ===

2008-08-16  Jesse van den Kieboom  <jesse@icecrew.nl>

	* daemon/gvfsbackenddav.c:
	Fixed using display_name property getting overwritten

2008-08-16  Christian Neumair  <cneumair@gnome.org>

	* daemon/gvfsbackendtrash.c (add_extra_trash_info):
	Correctly set copy name to original file name. Fixes #41852.

2008-08-07  Jesse van den Kieboom  <jesse@icecrew.nl>

	* client/gdaemonfileoutputstream.c:
	Fixed crash in gio because error was not properly
	being set in the query_info noop

2008-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* daemon/gvfsbackendsftp.c:
	Added restoring file permissions when replacing a file.

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c:
	Remove wrong dbus reply struct checks for replace_async,
	create_async and append_async that would live to (false)
	invalid reply errors.

2008-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* client/gdaemonfile.c:
	Set etag to "" when supplied to g_daemon_file_replace_async
	with NULL. Bug #546300

2008-08-05  Christian Kellner  <gicmo@gnome.org>
